--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>crackingthecoding</groupId>
     <artifactId>crackingthecoding</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
